# template-django

./: README.md  pyproject.toml
django_app/: settings.py  urls.py
