[project]
name = "django-app"
version = "0.1.0"
description = "Django project template managed by PDM"
authors = []
dependencies = [
    "django~=4.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
migrate = "python manage.py migrate"
start = "python manage.py runserver"
post_init = { composite = ["pdm install", "migrate", "start"] }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
